# variant-list-optimizer

./: .cpush.json5  Dockerfile  README.md  README.rst  config.json  pyproject.toml  ray_utils.py  requirements.txt  run-vl-opt.ipynb  run-vl-opt_bryan.ipynb  variant_list_optimizer.py  variant_obs_graph.py  variant_obs_tree.py  vlopt.scif
.github/workflows/: build_docker.yml
cpp/: CMakeLists.txt  conanfile.py
cpp/include/: hdf5_utils.hpp  highs_helper.hpp  static_array.hpp  taxonomic_tree.hpp
cpp/src/: compute_optimal_tlist.cpp  highs_helper.cpp  optimize_approx.cpp  optimize_cpsat.cpp  optimize_greedy.cpp  optimize_gurobi.cpp  optimize_highs.cpp  taxonomic_tree.cpp
docs/: setting-up-conda-and-conan.md
scripts/: pb-dev.sh  pull_cov-spectrum_strain_data-dates.py  rivanna-setup.sh  rivanna.sh  rivanna_runner_cli.sh  rivanna_weekly_batch.sh  rivanna_weekly_runner.sh  test_vlopt_pb_dev.sh  test_vlopt_rivanna.sh  variant_lists_summarizer.ipynb
src/variant_list_optimizer/: cli.py  make_graph.py  optimize.py
src/variant_list_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
